uploaded icon and updated config.json to become quotes instead of menu

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     ["Home", "/"],
     ["Locations", "/directions"]
   ],
-  "menu": [
+  "quotes": [
     "Bad Buns on Puns™",
     "The Cheesiest Burger Puns in Town™",
     "Burger of Much Pun™",
