--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
     ["Locations", "/directions"],
     ["Breakfast", "/breakfast"],
     ["Lunch", "/lunch"],
-    ["Dinner", "/dinner"]
+    ["Dinner", "/dinner"],
+    ["About Us", "/about-us"]
   ],
   "quotes": [
     "Bad Buns on Puns™",
@@ -13,10 +14,11 @@
     "Don't be Chicken, Try the (Some Burger With Chicken in it Here)™",
     "Lorem ipsum dolor sit amet, consectetur adipiscing elit™",
     "Thanks to Our Low Satisfaction Rates, Our Buns are Toasted on a Daily Basis™",
-    "Are You a Pig? Go Gannibal and Try Our Bacon Burger! Oink Oink!™",
+    "Are You a Pig? Go Cannibal and Try Our Bacon Burger! Oink Oink!™",
     "Try Our New Breakfast Burgers, They're Eggcelent!™",
     "Tired of Lying Fast Food Places? Try Our New Horse Meat Burger! 0% Beef, 0% Lies!™",
-    "水果人"
+    "水果人",
+    "Try our new sheep burgers, they're baaaaad!"
   ],
   "menu":{
       "Breakfast" : [
