footer-at-bottom temporarily removed

--- a/config.json
+++ b/config.json
@@ -22,28 +22,28 @@
   ],
   "menu":{
       "Breakfast" : [
-        ["Name", "Path", "Description"],
+        ["BreakfastItem1", "Path", "b"],
         ["Name", "Path", "Description"],
         ["Name", "Path", "Description"],
         ["Name", "Path", "Description"],
         ["Name", "Path", "Description"]
       ],
     "Lunch" : [
-        ["Name", "Path", "Description"],
+        ["LunchItem1", "Path", "l"],
         ["Name", "Path", "Description"],
         ["Name", "Path", "Description"],
         ["Name", "Path", "Description"],
         ["Name", "Path", "Description"]
       ],
       "Dinner" : [
-        ["Name", "Path", "Description"],
+        ["DinnerItem1", "Path", "D1"],
         ["Name", "Path", "Description"],
         ["Name", "Path", "Description"],
         ["Name", "Path", "Description"],
         ["Name", "Path", "Description"]
       ],
       "Dessert": [
-        ["Name", "Path", "Description"],
+        ["DessertItem1", "Path", "D2"],
         ["Name", "Path", "Description"],
         ["Name", "Path", "Description"],
         ["Name", "Path", "Description"],
