Start filling in image path, description, name and price placeholders in config

--- a/config.json
+++ b/config.json
@@ -30,7 +30,7 @@
   ],
   "menu":{
       "Breakfast" : [
-        ["BreakfastItem1", "Some really fancy description about this really interesting food item", "$3.00", "http://scene7.zumiez.com/is/image/zumiez/pdp_hero/HUF-Triangle-Black-Baseball-Strapback-Hat-_266664-front.jpg"],
+        ["Breakfast Hat", "Anyone ever tell you to put your foot in your mouth? Well hats taste better.", "$16.32", "http://scene7.zumiez.com/is/image/zumiez/pdp_hero/HUF-Triangle-Black-Baseball-Strapback-Hat-_266664-front.jpg"],
         ["Name", "Description", "$3.00", "http://pcgamehaven.com/wp-content/uploads/2015/08/best-gaming-mouse-300x224.png"],
         ["Name", "Description", "$3.00", "http://www.ikea.com/PIAimages/0385322_PE558444_S5.JPG"],
         ["Name", "Description", "$3.00", "http://assets.academy.com/mgen/02/10604502.jpg"],
@@ -39,16 +39,16 @@
         ["Name", "Description", "$3.00", "https://www.royalcanin.com/~/media/Royal-Canin/Product-Categories/cat-adult-landing-hero.ashx"]
       ],
     "Lunch" : [
-        ["LunchItem1", "l", "$3.00", ""],
-        ["Name", "Description", "$3.00", ""],
-        ["Name", "Description", "$3.00", ""],
+        ["Sushi Burger", "Something smells fishy about this one, but I just can't figure out what.", "$999.99", "images/Sushi-Burger.png"],
+        ["Ramen Burger", "Poor college student? Recently fired? Try our new budget burger! Now with ramen noodles! It tastes terrible, but its cheap. Thats just my two cents!", "$0.02", "images/ramen_burger.png"],
+        ["Earth Burger", "Celebrating earth day? Cosplaying as an alien bent on world domination? We've got the perfect lunch item for you!", "$1,000,000,000.00", "images/world_burger.png"],
         ["Name", "Description", "$3.00", ""],
         ["Name", "Description", "$3.00", ""]
       ],
       "Dinner" : [
-        ["DinnerItem1", "D1", "$3.00", ""],
-        ["Name", "Description", "$3.00", ""],
-        ["Name", "Description", "$3.00", ""],
+        ["Avacodo Burger", "TODO PUNSCRIPTION HERE", "$4.20", "images/avacodo_burger.png"],
+        ["Chicken Burger", "Don't be chicken, try our new Chick Filet burger today!", "$6.90", "images/chicken-burger.png"],
+        ["Mutant Burgers", "These burgers may or may not have quantum entangled their way into a vat of nuclear waste. 17% chance of giving super-powers upon consuption.", "$42.00", "images/mutant_burgers.png"],
         ["Name", "Description", "$3.00", ""],
         ["Name", "Description", "$3.00", ""]
       ],
