css - quote background - center text - flex align attempts

--- a/config.json
+++ b/config.json
@@ -34,7 +34,7 @@
         ["Name", "Description", "$3.00", "http://pcgamehaven.com/wp-content/uploads/2015/08/best-gaming-mouse-300x224.png"],
         ["Name", "Description", "$3.00", "http://www.ikea.com/PIAimages/0385322_PE558444_S5.JPG"],
         ["Name", "Description", "$3.00", "http://assets.academy.com/mgen/02/10604502.jpg"],
-        ["Name", "Description", "$3.00", "http://www.ikea.com/PIAimages/0445780_PE596064_S5.JPG"],
+        ["Name", "A really descriptive summary about an editable product, described in extreme detail to give the reader a sense of deliciousness", "$3.00", "http://www.ikea.com/PIAimages/0445780_PE596064_S5.JPG"],
         ["Name", "Description", "$3.00", "http://gmauthority.com/blog/wp-content/uploads/2013/05/GM-4.3L-V6-EcoTec3-LV3-Engine-1.jpeg"],
         ["Name", "Description", "$3.00", "https://www.royalcanin.com/~/media/Royal-Canin/Product-Categories/cat-adult-landing-hero.ashx"]
       ],
